[package]
name = "alara"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[dependencies]
# Local Deps:
aurora = { path = "../aurora" }

# Crates.io Deps:
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
