[package]
name = "alara"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[dependencies]
# Local Deps:
aurora = { path = "../aurora" }

# Crates.io Deps:
anyhow = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
