[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.2" }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
const_format = { version = "0.2" }
either = { version = "1.8", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
const_format = { version = "0.2" }
